syntax = "proto3";
package desmos.reports.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/desmos-labs/desmos/v3/x/reports/types";

// Report contains the data of a generic report
message Report {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the subspace for which the report has been created
  uint64 subspace_id = 1 [ (gogoproto.customname) = "SubspaceID" ];

  // Id of the report
  uint64 id = 2 [ (gogoproto.customname) = "ID" ];

  // Id of the reason this report has been created for
  repeated uint32 reasons_ids = 3 [ (gogoproto.customname) = "ReasonsIDs" ];

  // (optional) Message attached to this report
  string message = 4;

  // Address of the reporter
  string reporter = 5;

  // Target of the report
  google.protobuf.Any target = 6;

  // Time in which the report was created
  google.protobuf.Timestamp creation_date = 7
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}

// UserTarget contains the data of a report about a user
message UserTarget {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Address of the reported user
  string user = 1;
}

// PostTarget contains the data of a report about a post
message PostTarget {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the reported post
  uint64 post_id = 1 [ (gogoproto.customname) = "PostID" ];
}

// Reason contains the data about a reporting reason
message Reason {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the subspace for which this reason is valid
  uint64 subspace_id = 1 [ (gogoproto.customname) = "SubspaceID" ];

  // Id of the reason inside the subspace
  uint32 id = 2 [ (gogoproto.customname) = "ID" ];

  // Title of the reason
  string title = 3;

  // (optional) Extended description of the reason and the cases it applies to
  string description = 4;
}

// Params contains the module parameters
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // List of available reasons from which new subspaces can pick their default
  // ones
  repeated StandardReason standard_reasons = 1 [ (gogoproto.nullable) = false ];
}

// StandardReason contains the data of a standard reason that can be picked and
// used from different subspaces
message StandardReason {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the reason inside the subspace
  uint32 id = 1 [ (gogoproto.customname) = "ID" ];

  // Title of the reason
  string title = 2;

  // (optional) Extended description of the reason and the cases it applies to
  string description = 3;
}